// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Fade /> > should finish animation 1`] = `
<DocumentFragment>
  <div
    style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    Inside
  </div>
</DocumentFragment>
`;

exports[`<Fade /> > should render with default styles 1`] = `
<DocumentFragment>
  <div
    style="opacity: 0; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; visibility: hidden;"
  >
    Inside
  </div>
</DocumentFragment>
`;
